added multi threading as a correct way to well manage the code fixed errors: 	freezing game while trying to quit, only quits when the server is down 	fixed the misrendering of the vector related to the objects being rendered used mutex to limit access to shared variables

--- a/server_test/Makefile
+++ b/server_test/Makefile
@@ -1,14 +1,16 @@
 CXX = g++
-CXXFLAGS = -std=c++17 -Wall -Wextra -lSDL2 -lSDL2_net -Wunused-parameter
+CXXFLAGS = -std=c++17 -Wall -Wextra -lSDL2 -lSDL2_net -Wunused-parameter 
 SERVER = server
 CLIENT = client
 COMMON_DATA = serialisation.cpp game_items.cpp
-SERVER_SRC = server.cpp $(COMMON_DATA)
-CLIENT_SRC = client.cpp $(COMMON_DATA)
+SERVER_SRC = server_mix1.cpp $(COMMON_DATA)
+CLIENT_SRC = client_mix1.cpp $(COMMON_DATA)
 all: $(SERVER) $(CLIENT)
 $(SERVER): $(SERVER_SRC)
+	rm -f $(SERVER) $(CLIENT)
 	$(CXX) $(CXXFLAGS) -o $(SERVER) $(SERVER_SRC)
 $(CLIENT): $(CLIENT_SRC)
+	rm -f $(CLIENT)
 	$(CXX) $(CXXFLAGS) -o $(CLIENT) $(CLIENT_SRC)
 clean:
 	rm -f $(SERVER) $(CLIENT)
